# orchestra-goose

./: 404.html  AGENTS.md  BUILDING_LINUX.md  Cargo.toml  FORK_ANCESTRY.md  HOOKS_GAP_ANALYSIS.md  MIGRATION_MAPPING.md  ORCHESTRA_DISTRO.md  RELEASE_CHECKLIST.md  W3_BENCHMARK_RESULTS.md  WAVE7_PROJECT_CHECKLIST.md  download_cli.ps1  download_cli.sh  goose-docs-map.md  index.html  skills-manifest.json
.github/workflows/: build-cli.yml  bundle-desktop-windows.yml  bundle-goose2.yml  canary.yml  ci.yml  create-version-bump-pr.yaml  dependabot-auto-merge.yml  orchestra-fork-guard.yml  pr-comment-build-cli.yml  pr-comment-bundle-intel.yml  pr-comment-bundle-windows.yml  pr-comment-bundle.yml  pr-smoke-test.yml  pr-website-preview.yml  publish-ask-ai-bot.yml  publish-docker.yml  publish-npm.yml  recipe-security-scanner.yml  release-goose2.yml  release.yml  stale.yml
.husky/: pre-commit
assets/js/: 0a45c249.88d3c120.js  814f3328.74a55cbd.js  main.fe03630e.js  runtime~main.1b2011ee.js
blog/: index.html
blog/README/: index.html
blog/archive/: index.html
blog/authors/: index.html
community/: index.html
crates/goose/: Cargo.toml  acp-meta.json  acp-schema.json
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.rs
crates/goose-cli/src/commands/: info.rs  update.rs
crates/goose-cli/src/session/: completion.rs  mod.rs
crates/goose-mcp/: Cargo.toml
crates/goose-mcp/src/: subprocess.rs
crates/goose-server/: Cargo.toml
crates/goose-server/src/: main.rs  state.rs  tls.rs
crates/goose-server/src/commands/: agent.rs
crates/goose-server/src/routes/: config_management.rs  local_inference.rs
crates/goose-server/src/routes/templates/: mcp_app_proxy.html
crates/goose/src/: lib.rs  model.rs  sources.rs
crates/goose/src/acp/: mcp_app_proxy.rs  mod.rs  server.rs  server_factory.rs
crates/goose/src/acp/templates/: mcp_app_proxy.html
crates/goose/src/acp/transport/: connection.rs  http.rs  mod.rs  websocket.rs
crates/goose/src/agents/: agent.rs  execute_commands.rs  extension_manager.rs  mcp_client.rs  mod.rs
crates/goose/src/agents/platform_extensions/: mod.rs  summon.rs
crates/goose/src/agents/platform_extensions/developer/: shell.rs
crates/goose/src/config/: base.rs  declarative_providers.rs
crates/goose/src/dictation/: providers.rs
crates/goose/src/providers/: anthropic.rs  base.rs  chatgpt_codex.rs  cli_common.rs  codex.rs  init.rs  local_inference.rs  openai.rs  provider_registry.rs
crates/goose/src/providers/canonical/data/: canonical_models.json  provider_metadata.json
crates/goose/src/providers/declarative/: deepseek.json  moonshot.json  novita.json  nvidia.json  opencode_go.json  tensorix.json  zai.json  zhipu.json
crates/goose/src/providers/formats/: anthropic.rs  openai.rs
crates/goose/src/providers/inventory/: mod.rs
crates/goose/src/security/: mod.rs
crates/goose/src/session/: thread_manager.rs
crates/goose/src/skills/: builtin.rs  client.rs  mod.rs
crates/goose/src/skills/builtins/: goose_doc_guide.md
crates/goose/tests/: acp_secret_cache_invalidation_test.rs  mcp_integration_test.rs
crates/goose/tests/acp_common_tests/: mod.rs
crates/goose/tests/acp_fixtures/: mod.rs
crates/goose/tests/mcp_replays/: github-mcp-serverstdio  npx-y@modelcontextprotocol_server-everything@2026.1.14  uvrun--withfastmcp==2.14.4fastmcpruntests_fastmcp_test_server.py  uvxmcp-server-fetch
deeplink-generator/: index.html
distro-templates/: active_tasks.md.seed  orchestra-config.yaml  project.toml.example
docs/experimental/: index.html
docs/goose-architecture/: index.html
docs/quickstart/: index.html
docs/troubleshooting/: index.html
documentation/: package-lock.json  package.json
extension/: index.html
extensions/: index.html
extensions/detail/: index.html
grants/: index.html
markdown-page/: index.html
pr-preview/pr-7054/: 404.html  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-7384/: 404.html  goose-docs-map.md  index.html  servers.json  sitemap.xml  skills-manifest.json
pr-preview/pr-7420/: 404.html  goose-docs-map.md  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-7502/: 404.html  goose-docs-map.md  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-7628/: 404.html  goose-docs-map.md  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-7786/: 404.html  goose-docs-map.md  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-7950/: 404.html  goose-docs-map.md  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-7952/: 404.html  goose-docs-map.md  index.html  sitemap.xml  skills-manifest.json
pr-preview/pr-7967/: 404.html  goose-docs-map.md  index.html  inkeepChatButton.js  sitemap.xml  skills-manifest.json
pr-preview/pr-8060/: 404.html  goose-docs-map.md  index.html  inkeepSearchBar.js  sitemap.xml  skills-manifest.json
pr-preview/pr-8152/: 404.html  goose-docs-map.md  index.html  inkeepChatButton.js  servers.json  sitemap.xml  (+1 more)
prompt-library/: index.html
recipe-generator/: index.html
recipes/: audit-evidence-check.yaml  audit-format-check.yaml  auto-ingest-claims.yaml  classify-prompt.yaml  decision-line-watch.yaml  escalate-telegram.yaml  gitnexus-stale-check.yaml  gitnexus-suggest.yaml  guardrails.yaml  handoff.yaml  index.html  lookahead-brief.yaml  monitor-active-tasks.yaml  monitoring-setup.yaml  peer-pane.yaml  precompact-checkpoint.yaml  project-doctor.yaml  validate-wiki.yaml
scripts/: install-goosed-service.ps1  install-tom-briefing-task.ps1  measure-lookahead-latency.sh  migrate-project.ps1  precompute-briefing.py  refresh-tom-briefing.py  smoke-test-fresh-install.ps1  wire-tom-into-goose-config.py
skills/: index.html
ui/: pnpm-lock.yaml
ui/goose2/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
ui/goose2/src-tauri/src/: lib.rs
ui/goose2/src-tauri/src/commands/: acp.rs  distro.rs  mod.rs
ui/goose2/src-tauri/src/services/: distro_bundle.rs  goose_config.rs  mod.rs
ui/goose2/src-tauri/src/services/acp/: goose_serve.rs
wezbridge-compat/: README.md  index.cjs  package-lock.json  package.json
(+14198 files in other folders)
