[package]
name = "goose-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[[bin]]
name = "goose"
path = "src/main.rs"

[[bin]]
name = "generate_manpages"
path = "src/bin/generate_manpages.rs"

[dependencies]
clap_mangen = "0.2.31"
goose = { path = "../goose", default-features = false }
goose-mcp = { path = "../goose-mcp" }
rmcp = { workspace = true }
clap = { workspace = true }
cliclack = "0.3.5"
console = "0.16.1"
dotenvy = { workspace = true }
bat = { version = "0.26.1", default-features = false, features = ["regex-onig"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
etcetera = { workspace = true }
rand = { workspace = true }
rustyline = "15.0.0"
tracing = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json", "time"] }
tracing-appender = { workspace = true }
shlex = "1.3.0"
async-trait = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
tar = "0.4.45"
reqwest = { workspace = true, features = ["blocking"], default-features = false }
zip = { workspace = true }
bzip2 = "0.5"
webbrowser = { workspace = true }
indicatif = "0.18.1"
tokio-util = { workspace = true, features = ["compat", "rt"] }
anstream = "1.0.0"
open = "5.3.4"
url = { workspace = true }
urlencoding = { workspace = true }
clap_complete = "4.6.2"
comfy-table = "7.2.2"
sha2 = { workspace = true }
sigstore-verify = { version = "=0.6.5", default-features = false }
axum.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { workspace = true }

[features]
default = ["code-mode", "local-inference", "aws-providers", "telemetry", "otel", "rustls-tls"]
code-mode = ["goose/code-mode"]
local-inference = ["goose/local-inference"]
aws-providers = ["goose/aws-providers"]
cuda = ["goose/cuda", "local-inference"]
telemetry = ["goose/telemetry"]
otel = ["goose/otel"]
# disables the update command
disable-update = []
rustls-tls = [
    "reqwest/rustls",
    "sigstore-verify/rustls",
    "goose/rustls-tls",
    "goose-mcp/rustls-tls",
]
native-tls = [
    "reqwest/native-tls",
    "sigstore-verify/native-tls",
    "goose/native-tls",
    "goose-mcp/native-tls",
]

[dev-dependencies]
tempfile = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    # Used only in windows
    "winapi",
]
