[package]
name = "goose-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[features]
default = ["code-mode", "local-inference", "aws-providers", "telemetry", "otel", "rustls-tls"]
code-mode = ["goose/code-mode"]
local-inference = ["goose/local-inference"]
aws-providers = ["goose/aws-providers"]
cuda = ["goose/cuda", "local-inference"]
telemetry = ["goose/telemetry"]
otel = ["goose/otel"]
rustls-tls = [
    "reqwest/rustls",
    "tokio-tungstenite/rustls-tls-native-roots",
    "axum-server/tls-rustls",
    "dep:rustls",
    "dep:aws-lc-rs",
    "goose/rustls-tls",
    "goose-mcp/rustls-tls",
]
native-tls = [
    "reqwest/native-tls",
    "tokio-tungstenite/native-tls",
    "axum-server/tls-openssl",
    "dep:openssl",
    "goose/native-tls",
    "goose-mcp/native-tls",
]

[dependencies]
goose = { path = "../goose", default-features = false }
goose-mcp = { path = "../goose-mcp" }
rmcp = { workspace = true }
axum = { workspace = true, features = ["ws", "macros"] }
tokio = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json", "time"] }
tracing-appender = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
base64 = { workspace = true }
config = { version = "0.15.13", features = ["toml"] }
thiserror = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono"] }
reqwest = { workspace = true, features = ["json", "blocking", "multipart", "system-proxy"], default-features = false }
tokio-util = { workspace = true }
serde_path_to_error = "0.1.20"
tokio-tungstenite = { version = "0.28.0" }
url = { workspace = true }
rand = { workspace = true }
hex = "0.4.3"
subtle = "2.6"
socket2 = "0.6.1"
fs2 = { workspace = true }
rustls = { version = "0.23", features = ["aws_lc_rs"], optional = true }
uuid = { workspace = true }
rcgen = "0.14"
axum-server = { version = "0.8.0" }
aws-lc-rs = { version = "1.16.3", optional = true }
openssl = { version = "0.10", optional = true }
pem = "3.0.6"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.56.0" }

[[bin]]
name = "goosed"
path = "src/main.rs"

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"

[dev-dependencies]
tower = "0.5.2"

[package.metadata.cargo-machete]
ignored = [
    # Used only in windows
    "winreg",
]
